[package]
name = "cnode"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Node.js runtime and FFI"
license = "MIT"
repository = "https://github.com/cnode/cnode"

[lib]
name = "cnode_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cnode"
path = "src/bin/cnode.rs"

[[bin]]
name = "cnpm"
path = "src/bin/cnpm.rs"

[[bin]]
name = "cnpx"
path = "src/bin/cnpx.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"
dirs = "5.0"
colored = "2.1"
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
